Implement our own limited base64 encode/decode. (Fixes #2663)
The DatatypeConverter class we used to solve a problem with large
modules was removed at Java 9 SE but the replacement Base64 class does
not exist in Java 7 which we'd like to support. Also tidies some
formatting and comments.